Fix collapsible group content jump

--- a/packages/component/src/Middleware/ActivityGrouping/ui/PartGrouping/CollapsibleGrouping.module.css
+++ b/packages/component/src/Middleware/ActivityGrouping/ui/PartGrouping/CollapsibleGrouping.module.css
@@ -34,17 +34,22 @@
 }
 
 :global(.webchat) .collapsible-grouping__content {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  min-width: 0;
   height: 0;
-  interpolate-size: allow-keywords;
-  margin: calc(var(--webchat__padding--regular) / -2);
   overflow: clip;
-  padding: calc(var(--webchat__padding--regular) / 2);
+  interpolate-size: allow-keywords;
   transition:
     visibility 0s,
     height 0.2s ease;
   visibility: hidden;
+}
+
+:global(.webchat) .collapsible-grouping__content-list {
+  display: flex;
+  flex-direction: column;
+  margin: calc(var(--webchat__padding--regular) / -2);
+  padding: calc(var(--webchat__padding--regular) / 2);
 }
 
 :global(.webchat) .collapsible-grouping__content--open {
